# human-bandwidth

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: build-and-lint.yml  test.yml
src/: binary_system.rs  lib.rs  option.rs  serde.rs
src/binary_system/: serde.rs
